# winds1edit

./: .gitignore  CMakeLists.txt
.kdev4/: .gitignore
allegro/: .gitignore  CHANGES  CMakeLists.txt
allegro/docs/txt/: allegro.txt  readme.txt
winds1edit/: CMakeLists.txt  dccinfo.c  dccinfo.h  main.c  setting
